--- a/src/app/pages/user/containers/signup/signup.component.html
+++ b/src/app/pages/user/containers/signup/signup.component.html
@@ -5,6 +5,7 @@
   ></app-file-upload>
   <app-dynamic-form
     [model]="model"
+    [formBtnText]="'Sign up'"
     (submitEmmiter)="onSubmit($event)"
   ></app-dynamic-form>
 </app-user-form>
