--- a/src/app/features/user/components/user-form/user-form.component.html
+++ b/src/app/features/user/components/user-form/user-form.component.html
@@ -1,5 +1,5 @@
 <div class="user-form__container">
-  <h1>{{ title }}</h1>
+  <h1 class="user-form__title text__heading1">{{ title }}</h1>
   <ng-content></ng-content>
   <div class="user-form__footer"></div>
 </div>
