--- a/src/app/pages/user/containers/signup/signup.component.html
+++ b/src/app/pages/user/containers/signup/signup.component.html
@@ -1,11 +1,14 @@
 <app-user-form [title]="'Sign up'">
-  <app-file-upload
-    (formDataEmitter)="onAvatarUpload($event)"
-    [fileType]="'jpg'"
-  ></app-file-upload>
+  <app-file-upload (formDataEmitter)="onAvatarUpload($event)"></app-file-upload>
   <app-dynamic-form
     [model]="model"
     [formBtnText]="'Sign up'"
     (submitEmmiter)="onSubmit($event)"
   ></app-dynamic-form>
 </app-user-form>
+
+<app-navigation-link
+  text="Already have an account ?"
+  linkText="Login!"
+  [navigateTo]="loginPageLink"
+></app-navigation-link>
