feat(NGRX): Add ngrx store for user, use login/signup api calls with ngrx effects

--- a/src/app/pages/user/containers/login/login.component.html
+++ b/src/app/pages/user/containers/login/login.component.html
@@ -11,3 +11,9 @@
   linkText="Create it !"
   [navigateTo]="signupPageLink"
 ></app-navigation-link>
+
+<ng-container *ngIf="isLoading$ | async">
+  <app-loading-overlay>
+    <app-loader></app-loader>
+  </app-loading-overlay>
+</ng-container>
