--- a/src/app/layouts/user/user-layout.component.scss
+++ b/src/app/layouts/user/user-layout.component.scss
@@ -1,5 +1,6 @@
 .user-layout-wrapper {
-  @apply flex items-start justify-center py-6 h-[100vh] w-[100vw]
+  @apply flex items-start justify-center pt-6 h-[100vh] w-[100vw]
    bg-[url('../../../assets/bg/ellipse_user_mobile_bg.png')]
     md:bg-[url('../../../assets/bg/ellipse_user_bg.png')] bg-no-repeat bg-top overflow-x-hidden;
 }
+// flex-grow
