chore(VIDEO_PLAYER): Fix bug with close video modal; Update imports; Fix namings

--- a/src/app/features/video/components/video-item/video-item.component.html
+++ b/src/app/features/video/components/video-item/video-item.component.html
@@ -1,7 +1,7 @@
 <!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
 <img
-  [src]="formThumbnailPath(videoItem.thumbnailUrlPath)"
+  [src]="formThumbnailUrl(videoItem.thumbnailUrlPath)"
   class="video__image"
   (click)="onVideoClick(videoItem)"
   alt="video image"
