--- a/src/app/features/video/components/modal-player/modal-player.component.html
+++ b/src/app/features/video/components/modal-player/modal-player.component.html
@@ -1,12 +1,16 @@
-<app-modal-overlay (click)="onCrossClick()">
-  <div class="modal">
+<!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
+<!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
+<app-modal-overlay (click)="onClose()">
+  <div class="modal" (click)="onVideoClick($event)">
     <fa-icon
       [icon]="faClose"
-      (click)="onCrossClick()"
+      (click)="onClose()"
       class="modal__close fa-xl"
+      tabindex="0"
     />
+
     <video class="modal__video" controls autoplay>
-      <source [src]="formVideoPath(videoItem.videoUrlPath)" type="video/mp4" />
+      <source [src]="formVideoUrl(videoItem.videoUrlPath)" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
