feat(MAIN-PAGE): Add main page; Add video swipe feature; Add replacement video with img when component is not visible

--- a/src/app/layouts/video/video-layout.component.html
+++ b/src/app/layouts/video/video-layout.component.html
@@ -1,2 +1,7 @@
-<router-outlet></router-outlet>
-<p>VIDEO LAYOUT</p>
+<app-header></app-header>
+
+<div>
+  <div class="video-layout-wrapper">
+    <router-outlet></router-outlet>
+  </div>
+</div>
