--- a/src/app/shared/components/header/navigation-menu/navigation-menu.component.scss
+++ b/src/app/shared/components/header/navigation-menu/navigation-menu.component.scss
@@ -1,3 +1,11 @@
+.burger {
+  @apply z-10 pl-3;
+
+  &__icon {
+    @apply block w-8 text-white cursor-pointer hover:scale-105 transition-transform;
+  }
+}
+
 .navigation {
   @apply shadow-xl fixed w-screen bottom-0 top-10 opacity-0 -translate-x-10 transition-all bg-white
   sm:w-fit;
