--- a/src/app/features/video/components/video-recorder/video-recorder.component.html
+++ b/src/app/features/video/components/video-recorder/video-recorder.component.html
@@ -1,28 +1,79 @@
-<app-loader
-  class="recorder__loader"
-  *ngIf="isCameraLoading$ | async"
-></app-loader>
-<video
-  poster="../../../../../assets/images/no_cameras_found.png"
-  class="recorder__video"
-  [ngClass]="isRecording ? 'recorder__video--recording' : ''"
-  #video
-  autoplay
-></video>
-<div class="recorder__controls">
-  <app-button
-    (btnClick)="toggleCamera()"
-    [text]="'Turn on/off camera'"
-  ></app-button>
-  <div class="recorder__controls-state">
-    <app-button
-      (btnClick)="startRecording()"
-      [text]="'Start Recording'"
-    ></app-button>
-    <app-button
-      [isDisabled]="!isRecording"
-      (btnClick)="stopRecording()"
-      [text]="'Stop Recording'"
-    ></app-button>
+<div class="recorder__container">
+  <div class="recorder">
+    <app-loader
+      class="recorder__loader"
+      *ngIf="recordingParams.isCameraLoading$ | async"
+    ></app-loader>
+
+    <video
+      poster="../../../../../assets/images/no_cameras_found.png"
+      class="recorder__video"
+      [ngClass]="{ 'recorder__video--recording': recordingParams.isRecording }"
+      #video
+      autoplay
+    ></video>
+
+    <ul class="recorder__warning text__small">
+      <span class="text text__small"> *Take attetion: </span>
+      <li>
+        <span class="recorder__warning--text text text__small">
+          max video duration {{ maxVideoDurationText }}
+        </span>
+      </li>
+      <li>
+        <span class="recorder__warning--text text__small">
+          min video duration {{ minVideoDurationText }}
+        </span>
+      </li>
+    </ul>
+
+    <div class="recorder__controls">
+      <app-button
+        [isDisabled]="recordingParams.isRecording"
+        (btnClick)="toggleCamera()"
+        [text]="
+          'Turn' +
+          (recordingParams.isCameraOpen ? ' off' : ' on') +
+          ' the camera'
+        "
+      ></app-button>
+
+      <div class="recorder__controls-state">
+        <app-button
+          [isDisabled]="!recordingParams.isStartRecordingAvailable"
+          (btnClick)="startRecording()"
+          [text]="'Start Recording'"
+        ></app-button>
+
+        <app-button
+          [isDisabled]="!recordingParams.isStopRecordingAvailable"
+          (btnClick)="stopRecording()"
+          [text]="'Stop Recording'"
+        ></app-button>
+      </div>
+    </div>
   </div>
+
+  <ng-container *ngIf="recordedVideoUrl">
+    <div>
+      <video
+        controls
+        autoplay
+        class="recorder__video recorder__video-preview--offset"
+        [src]="recordedVideoUrl"
+      ></video>
+
+      <div class="recorder__controls">
+        <app-button
+          (btnClick)="uploadRecordedVideo()"
+          text="Upload the video"
+        ></app-button>
+
+        <app-button
+          (btnClick)="deleteRecordedVideo()"
+          text="Delete the video"
+        ></app-button>
+      </div>
+    </div>
+  </ng-container>
 </div>
