--- a/src/app/features/video/components/video-recorder/video-recorder.component.scss
+++ b/src/app/features/video/components/video-recorder/video-recorder.component.scss
@@ -1,18 +1,14 @@
 .recorder__container {
-  @apply flex;
+  @apply flex flex-col md:flex-row justify-center relative;
 
   .recorder {
-    @apply pr-5;
+    @apply md:pr-5 flex flex-col w-[325px] sm:w-[450px] md:w-[400px] 2xl:w-[450px];
     &__loader {
       @apply fixed left-[50%] translate-x-[-50%] translate-y-[50%];
     }
 
     &__video {
-      @apply object-cover rounded-xl shadow-container mx-auto h-[70vh] md:h-[70vh] xl:h-[75vh] 2xl:h-[75vh] sm:w-[450px] md:w-[400px] 2xl:w-[450px];
-
-      &-preview--offset {
-        @apply mb-6;
-      }
+      @apply object-cover rounded-xl shadow-container self-center h-[70vh] md:h-[70vh] xl:h-[75vh] 2xl:h-[75vh];
     }
 
     &__video--recording {
@@ -20,7 +16,7 @@
     }
 
     &__controls {
-      @apply flex justify-between py-3;
+      @apply flex justify-between gap-2 md:gap-0 py-3;
     }
 
     &__controls-state {
@@ -28,10 +24,18 @@
     }
 
     &__warning {
-      @apply pl-2 pt-1 text-slate-600;
-
+      @apply ml-12 pt-1 invisible opacity-0 text-white p-3 rounded-lg bg-black bg-opacity-70 w-0 transition-all whitespace-nowrap;
+      &--visible {
+        @apply visible opacity-100 w-full;
+      }
       &--text {
         @apply p-0 m-0 pl-2;
+      }
+      &-container {
+        @apply absolute top-0 -left-7 md:-left-9;
+      }
+      &-icon {
+        @apply block text-center rounded-full text-white bg-opacity-70 cursor-pointer hover:scale-105 transition-transform bg-black w-6 h-6;
       }
     }
   }
