--- a/src/app/features/video/components/video-recorder/video-recorder.component.html
+++ b/src/app/features/video/components/video-recorder/video-recorder.component.html
@@ -25,7 +25,7 @@
         class="recorder__warning"
         [ngClass]="{ 'recorder__warning--visible': isWarningVisible }"
       >
-        <span class="text text-white text__small"> * Take attention: </span>
+        <span class="text text-white text__small"> * Pay attention: </span>
         <ul class="text__small">
           <li class="recorder__warning-item">
             <span class="recorder__warning--text text text__small">
