--- a/src/app/layouts/video/video-layout.component.html
+++ b/src/app/layouts/video/video-layout.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div>
-  <div class="video-layout-wrapper">
+  <div class="video-layout__wrapper">
     <router-outlet></router-outlet>
   </div>
 </div>
