--- a/src/app/pages/profile/containers/liked-videos/liked-videos.component.html
+++ b/src/app/pages/profile/containers/liked-videos/liked-videos.component.html
@@ -1,1 +1,5 @@
-<app-video-list></app-video-list>
+<app-video-list
+  (loadNewVideosEmitter)="loadNewVideos($event)"
+  [isLoading$]="isLoading$"
+  [videoList]="videoList"
+></app-video-list>
