--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,6 +1,10 @@
 .header {
   @apply fixed bg-green-700 bg-opacity-75  w-screen py-2 z-10;
-  &__logo {
-    @apply bg-[url('../../../../assets/images/Oval.png')] w-[32px] h-[32px] absolute top-1 right-6 bg-no-repeat;
+
+  &__avatar-container {
+    @apply absolute top-1 right-6 cursor-pointer;
+  }
+  &__avatar {
+    @apply w-[32px] h-[32px] rounded-md;
   }
 }
